<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/home_color"
    android:padding="20dp"
    android:background="@drawable/border_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_crud_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hapus_data"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/btn_dialog_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/binar_color"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/tv_crud_del"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/binar_color"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_crud_del"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>